fix jump popover position issue.

--- a/front-end/static/css/main.css
+++ b/front-end/static/css/main.css
@@ -39,6 +39,7 @@ body {
 }
 
 #jumppopover {
+    position: absolute;
     display: block;
     opacity: 0.9;
 }
